# Ars145

./: README.md
CWonNewGroup/src/: CMakeLists.txt  Group.cpp  Menu.cpp  Stream.cpp  Student.cpp  main.cpp  t2.txt  test.txt
CWonNewGroup/src/include/: Group.hpp  Menu.hpp  Stream.hpp  Student.hpp
